tests/fixtures/components/invalid-foldable/error.blade.php
@blaze(fold: true)

@props(['name'])

<div>
    @error($name)
        <span class="error">{{ $message }}</span>
    @enderror
</div>
